--- a/content/10.md
+++ b/content/10.md
@@ -65,3 +65,77 @@
 - ret：从栈中取得返回地址，并跳转到该位置。
 
 ###10.2.2 调用惯例
+函数的调用方和被调用方对于函数如何调用须要有一个明确的规定，只要双方遵守同样的规定，函数才能被正确地调用，这样的规定被称为调用惯例。一个调用惯例一般会规定如下几个方面的内容：
+
+- **函数参数的传递顺序和方式** 函数参数的传递有很多种方式，最常见的一种是通过栈传递。函数的调用方将参数压入栈中，函数自己再从栈中将参数取出。对于有多个参数的函数，调用惯例要规定函数调用方将参数压栈的顺序：是从左到右，还是从右到左。有些调用惯例还允许使用寄存器传递参数，以提高性能。
+- **栈的维护方式** 在函数将参数压栈之后，函数体会被调用，伺候需要被压入栈中的参数全部弹出，以使得栈在函数调用前后保持一致。这个弹出的工作可以由函数的调用方来完成，也可以由函数本身来完成。
+- **名字修饰的策略** 为了链接的时候对调用惯例进行区分，调用惯例要对函数本身的名字进行修饰。不同的调用惯例有不同的修饰策略。
+
+<table>
+	<tr>
+		<th>调用惯例</th>
+		<th>出栈方</th>
+		<th>参数传递</th>
+		<th>名字修饰</th>
+	</tr>
+	<tr>
+		<td>cdecl</td>
+		<td>函数调用方</td>
+		<td>从右至左的顺序压参数入栈</td>
+		<td>下划线+函数名</td>
+	</tr>
+	<tr>
+		<td>stdcall</td>
+		<td>函数本身</td>
+		<td>从右至左的顺序压参数入栈</td>
+		<td>下划线+函数名+@+参数的字节数</td>
+	</tr>
+	<tr>
+		<td>fastcall</td>
+		<td>函数本身</td>
+		<td>头两个DWORD类型或者占更少字节的参数被放入寄存器，其他剩下的参数按从右至左的顺序压入栈中</td>
+		<td>@+函数名+@+参数的字节数</td>
+	</tr>
+	<tr>
+		<td>pascal</td>
+		<td>函数本身</td>
+		<td>从左至右的顺序压参数入栈</td>
+		<td>较为复杂，参见pascal文档</td>
+	</tr>
+</table>
+
+###10.2.3 函数返回值传递
+函数将返回值存储在eax中，返回后函数的调用方再读取eax。但是eax本身只有4个字节，对于返回5~8字节对象的情况，几乎所有的调用惯例都是采用eax和edx联合返回的方式进行的。其中eax存储返回值要低4字节，而edx存储返回值要高1~4字节。而对于超过8字节的返回类型，一般会栈上额外开辟一片空间，并将这片空间的一部分作为传递返回值的临时对象，并将对象的地址作为隐藏参数传递给函数。
+
+##10.3 堆与内存管理
+###10.3.1 什么是堆
+堆是一块巨大的内存空间，常常占据整个虚拟空间的绝大部分。在这片空间里，程序可以请求一块连续内存，并自由地使用，这块内存在程序主动放弃之前都会一直保持有效。
+
+###10.3.2 Linux进程堆管理
+Linux提供了两种堆空间分配方式：brk()系统调用和mmap()系统调用。
+
+```C
+int brk(void *end_data_segment);
+
+void *mmap(void *start, size_t length, int prot, int flags, int fd, off_t offset);
+```
+
+glibc的malloc函数是这样处理用户的空间请求的：对于小于128KB的请求来说，它会在现有的堆空间里，按照堆分配算法为它分配一块空间并返回；对于大于128KB的请求来说，它会使用mmap()函数为它分配一块匿名空间，然后在这个匿名空间中为用户分配空间。
+
+###10.3.3 Windows进程堆管理
+![](../images/10.03.png)
+
+Windows进程将地址空间分配给了各种EXE、DLL文件、堆、栈。其中EXE文件一般位于0x00400000起始地址；而一部分DLL位于0x10000000起始地址，如运行库DLL；还有一部分DLL位于接近0x80000000位置，如系统DLL、NTDLL.DLL、Kernel32.DLL。
+
+Windows提供了一个API叫做VirtualAlloc()，用于向系统申请空间，它与Linux下的mmap非常相似。实际上VirtualAlloc()申请的空间不一定只用于堆，它仅仅是向系统预留了一块虚拟地址，应用程序可以按照需要随意使用。在使用VirtualAlloc()函数申请空间时，系统要求空间大小必须为页的整数倍，即对于x86系统来说，必须是4096字节的整数倍。为了避免造成大量的浪费，需要实现一个分配的算法。Windows堆管理器提供了与堆相关的API用来创建、分配、释放和销毁堆空间（HeapCreate、HeapAlloc、HeapFree和HeapDestroy）。
+
+###10.3.4 堆分配算法
+####1. 空闲链表
+把堆中各个空闲的块按照链表的方式连接起来，当用户请求一块空间时，可以遍历整个链表，知道找到合适大小的块并且将它拆分；当用户释放空间时将它合并到空闲链表中。
+
+####2. 位图
+将整个堆划分为大量的块，每个块的大小相同。当用户请求内存的时候，总是分配整数个块的空间给用户，第一个块我们称为已分配区域的头，其余的称为已分配区域的主体。而我们可以使用一个整数数组来记录块的使用情况，由于每个块只有头/主体/空闲三种状态，因此仅仅需要两位即可表示一个块。
+
+
+####3. 对象池
+如果每一次分配的大小都一样，那么就可以按照这个每次请求分配的大小作为一个单位，把整个堆空间划分为大量的小块，每次请求时只需要找到一个小块就可以了。
