--- a/content/02.md
+++ b/content/02.md
@@ -32,3 +32,18 @@
 ###2.2.3 语义分析
 语法分析仅仅是完成了对表达式的语法层面的分析，但是它并不了解这个语句是否真正有意义。编译器所能分析的语义是静态语义，所谓静态语义是指在编译期可以确定的语义，与之对应的动态语义就是只有在运行期才能确定的语义。
 
+###2.2.4 中间语言生成
+源代码优化器往往将整个语法树转换成中间代码，它是语法树的顺序表示。但是它一般跟目标机器和运行时环境是无关的，比如它不包含数据的尺寸、变量地址和寄存器的名字等。中间代码有很多种类型，在不同的编译器中有着不同的形式，比较常见的有：三地址码和P-代码。
+
+中间代码使得编译器可以被分为前端和后端。编译器前端负责产生机器无关的中间代码，编译器后端将中间代码转换成目标机器代码。
+
+###2.2.5 目标代码生成与优化
+编译器后端主要包括代码生成器和目标代码优化。代码生成器将中间代码转换成目标机器代码，这个过程十分依赖于目标机器，因为不同的机器有着不同的字长、寄存器、整数数据类型和浮点数数据类型等。最后目标代码优化器对上述的目标代码进行优化，比如选择合适的寻址方式、使用位移来代替乘法运算、删除多余的指令等。
+
+##2.3 链接器年龄比编译器长
+当程序修改时，子程序或跳转的目标地址都要重新计算，十分繁琐又耗时，并且很容易出错。这种重新计算各个目标的地址过程被叫做重定位。
+
+在一个程序被分割成多个模块以后，这些模块之间最后如何组合形成一个单一的程序是须解决的问题。模块之间如何组合的问题可以归结为模块之间如何通信的问题，最常见的属于静态语言的C/C++模块之间通信有两种方式，一种是模块间的函数调用，另外一种是模块间的变量访问。这个模块的拼接的过程就是链接。
+
+##2.4 模块拼接——静态链接
+链接的主要内容就是把各个模块之间相互引用的部分都处理好，使得各个模块之间能够正确地衔接。链接过程主要包括了地址和空间分配、符号决议和重定位等步骤。
